# focusclock

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  clock.cc  clock.h  clock_config.h  config.h  main.cc  utils.cc  utils.h  version.h.in
.github/workflows/: releases.yml
